# whisper-multi-cpu

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  benchmark.py  bindings.cpp  build.sh  cibuildwheel.toml  install_whisper_parallel_cpu.sh  pyproject.toml  readme.md  setup.py  test_build.py  test_local_build.py  test_transcribe.py  thread_benchmark.py  transcriber.cpp
.github/workflows/: build-wheels.yml  release.yml  test.yml
whisper_parallel_cpu/: whisper_model.py
whispercpp/: __init__.py  bindings.cpp  cli.py  model_manager.py  transcriber.cpp
